--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -15,10 +15,10 @@
                         <input class="form-control" type="text" placeholder="Username" name="username" required>
                     </div>
                     <br>
-                    <div class="form-group">
+                    <!-- <div class="form-group">
                         <input class="form-control" type="text" placeholder="Type" name="type">
                     </div>
-                    <br>
+                    <br> -->
                     <div class="form-group">
                         <input class="form-control" type="password" placeholder="Password" name="password" required>
                     </div>
