--- a/views/home.ejs
+++ b/views/home.ejs
@@ -362,7 +362,7 @@ https://templatemo.com/tm-565-onix-digital
                         <div class="thumb">
                           <!-- Trigger/Open the Modal -->
                         <a onclick="document.getElementById('id01').style.display='block'"
-                        class=""><img style="width: 100%; " src="https://i.guim.co.uk/img/static/sys-images/Guardian/Pix/pictures/2013/8/1/1375354802439/Blue---the-colour-008.jpg?width=300&quality=45&auto=format&fit=max&dpr=2&s=d32b70ddf7ecff3771c2d99d32eae422" alt=""></a>
+                        class=""><img style="width: 100%; " src="https://img.youtube.com/vi/lHiEUQzVeQA/maxresdefault.jpg" alt=""></a>
                         </div>
                       </div>
                     </li>
