added admin delete btn

--- a/views/payment.ejs
+++ b/views/payment.ejs
@@ -7,7 +7,7 @@
         <script src="https://js.instamojo.com/v1/checkout.js"></script>
         <script>
           function onButtonClick() {
-            Instamojo.open('https://www.instamojo.com/@bizquestaKit');
+            Instamojo.open('https://test.instamojo.com/@setstream_in');
           }
         </script>   
         <button onclick="onButtonClick()">
