--- a/views/admin-dashboard.ejs
+++ b/views/admin-dashboard.ejs
@@ -32,6 +32,7 @@
                         <th scope="col">Commision</th>
                         <th scope="col">Active Commision</th>
                         <th scope="col">Passive Commision</th>
+                        <th scope="col">Delete</th>
                       </tr>
                     </thead>
                     <tbody>
@@ -74,6 +75,7 @@
                             <td><%= commision %></td>
                             <td><%= active %></td>
                             <td><%= passive %></td>
+                            <td><a href="/users/<%= users[i]._id %>">Delete</a></td>
                           </tr>
                           <% currentintroducer = "" %>
                           <% commision = 0 %>
