--- a/views/search.ejs
+++ b/views/search.ejs
@@ -28,6 +28,7 @@
                             <th scope="col">Commision</th>
                             <th scope="col">Active Commision</th>
                             <th scope="col">Passive Commision</th>
+                            <th scope="col">Delete</th>
                         </tr>
                         </thead>
                         <tbody>
@@ -66,6 +67,7 @@
                                         <td><%= commision %></td>
                                         <td><%= active %></td> 
                                         <td><%= passive %></td>
+                                        <td><a href="/users/<%= users[i]._id %>">Delete</a></td>
                                         </tr>
                                                         
                                         <% currentintroducer = "" %>
