--- a/views/learn.ejs
+++ b/views/learn.ejs
@@ -1,47 +1,37 @@
 <%- include('partials/header') %>
 
-<div class="container" style="padding-top: 150px;">
+<div class="container center" style="padding-top: 150px;">
 
     <h1 style="font-family: 'PT Serif', serif;" class="center">Learn the <span style=" color: #ff695f;">Biz</span>Questa Ways!</h1>
     <br>
     <br>
     <main id="main">
-        <h3 class="center"style="text-decoration: underline; margin-bottom: 50px;">How to choose your niche on instagram!</h3>
-        <iframe width="100%" height="500px" src="https://www.youtube.com/embed/-btr3aUqQyA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <a href="https://youtube.com/playlist?list=PLsQ1eiX265ULhofISfIHqrNQvAB68YAdK" class="btn btn-buy" style="background: rgb(48, 187, 48); margin: 0 auto; text-align: center; font-size:large;">Sales Training</a>
         <br>
-        <h3 class="center"style="text-decoration: underline; margin-bottom: 50px; margin-top: 50px;">How to get more Instagram Reel views!</h3>
-        <iframe width="100%" height="506" src="https://www.youtube.com/embed/SmIPdMb3a80" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    </main>
         <br>
-        <h3 class="center"style="text-decoration: underline; margin-bottom: 50px; margin-top: 50px;">PERSONAL BRANDING AND SALES TRAINING BY VAIBHAV BHASKAR</h3>
-        <iframe width="100%" height="506" src="https://www.youtube.com/embed/_5QNOVQ-bjQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    </main>
+        <a href="https://youtube.com/playlist?list=PLsQ1eiX265ULSYJ_BMhFFGGHt42PT0I-2" class="btn btn-buy" style="background: orange; margin: 0 auto; text-align: center; font-size:large;">Instagram Mastery</a>
         <br>
-        <h3 class="center"style="text-decoration: underline; margin-bottom: 50px; margin-top: 50px;">Profile Picture Optimisation</h3>
-        <iframe width="100%" height="506" src="https://www.youtube.com/embed/yKeHjNAf_Es" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    </main>
         <br>
-        <h3 class="center"style="text-decoration: underline; margin-bottom: 50px; margin-top: 50px;">How to Generate leads through Instagram and how to close a sale on Whatsapp</h3>
-        <iframe width="100%" height="506" src="https://www.youtube.com/embed/ddJxBLIzrRk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    </main>
+        <a href="https://mega.nz/folder/yuBg2TRI#YCWxkWoCp9CTgtd8173Ljw" class="btn btn-buy" style="background: red; margin: 0 auto; text-align: center; font-size:large;">Whatsapp Bulk For PC</a>
         <br>
-        <h3 class="center"style="text-decoration: underline; margin-bottom: 50px; margin-top: 50px;">How To Close A Sale On A Call 📞</h3>
-        <iframe width="100%" height="506" src="https://www.youtube.com/embed/b6A_hhwvV0M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    </main>
         <br>
-        <h3 class="center"style="text-decoration: underline; margin-bottom: 50px; margin-top: 50px;">SALES TRAINING</h3>
-        <iframe width="100%" height="506" src="https://www.youtube.com/embed/9lHlLsx-234" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    </main>
+        <a href="https://youtu.be/z_I4-vhX-Ow" class="btn btn-buy" style="background: blue; margin: 0 auto; text-align: center; font-size:large;">Whatsapp Bulk For PC Tutorials</a>
         <br>
-        <h3 class="center"style="text-decoration: underline; margin-bottom: 50px; margin-top: 50px;">Facebook Ads Tutorial | How to Generate Ads through Facebook</h3>
-        <iframe width="100%" height="506" src="https://www.youtube.com/embed/LUpiVdK8yG8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    </main>
         <br>
-        <h3 class="center"style="text-decoration: underline; margin-bottom: 50px; margin-top: 50px;">How to Create CAROUSELS in canva very easily Bizquesta Special session</h3>
-        <iframe width="100%" height="506" src="https://www.youtube.com/embed/HkV8s-GuCSM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    </main>
+        <a href="https://drive.google.com/file/d/1dWbBe1_F4p_gJGW-G9MtqBDrHXemUnuF/view?usp=drivesdk" class="btn btn-buy" style="background: rgb(48, 187, 48); margin: 0 auto; text-align: center; font-size:large;">Android Whats Sender</a>
         <br>
-        <h3 class="center"style="text-decoration: underline; margin-bottom: 50px; margin-top: 50px;">Whatsapp Bulk Pc Tutorial</h3>
-        <iframe width="100%" height="506" src="https://www.youtube.com/embed/z_I4-vhX-Ow" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    </main>
         <br>
-        <h3 class="center"style="text-decoration: underline; margin-bottom: 50px; margin-top: 50px;">Android Whatsapp Sender tutorial</h3>
-        <iframe width="100%" height="506" src="https://www.youtube.com/embed/NdymnNrQd6g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    </main>
+        <a href="https://youtu.be/NdymnNrQd6g" class="btn btn-buy" style="background: orange; margin: 0 auto; text-align: center; font-size:large;">Android Whats Sender Tutorials</a>
         <br>
-        <h3 class="center"style="text-decoration: underline; margin-bottom: 50px; margin-top: 50px;">Bizquesta Lead Generation Facebook</h3>
-        <iframe width="100%" height="506" src="https://www.youtube.com/embed/jxWp11Gr12I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    </main>
         <br>
+        <a href="https://drive.google.com/file/d/1ILFfofJJaqhG-j-X_CzXo61FKgQ6xBxf/view?usp=drivesdk" class="btn btn-buy" style="background: red; margin: 0 auto; text-align: center; font-size:large;">Kinemaster Pro Version</a>
+        <br>
+        <br>
+        <a href="https://icedrive.net/1/5dnBKclGZE" class="btn btn-buy" style="background: blue; margin: 0 auto; text-align: center; font-size:large;">Database Link</a>
+        <br>
+        <br>
+        <a href="https://icedrive.net/1/f2v4rR257l" class="btn btn-buy" style="background: rgb(48, 187, 48); margin: 0 auto; text-align: center; font-size:large;">Facebook and Whatsapp Group Links</a>
+    </main>
 </div>
 
 <%- include('partials/footer') %>
