--- a/views/learn.ejs
+++ b/views/learn.ejs
@@ -31,6 +31,9 @@
         <br>
         <br>
         <a href="https://icedrive.net/1/f2v4rR257l" class="btn btn-buy" style="background: rgb(48, 187, 48); margin: 0 auto; text-align: center; font-size:large;">Facebook and Whatsapp Group Links</a>
+        <br>
+        <br>
+        <p style="font-size: large;">password: atozmarketingkit.in</p>
     </main>
 </div>
 
