change in payments

--- a/views/product-page.ejs
+++ b/views/product-page.ejs
@@ -8,7 +8,7 @@
         <div class="col-md-6 col-sm-12">
             <img src="/assets/images/product-image.png" alt="" class="default-img img-fluid image-show">
         </div>
-        <div class="col-md-6 col-sm-12 center product-body">
+        <div class="col-md-6 col-sm-12 product-body">
             <h1 class="display-5 center">BIZQUESTA MARKETING AND BRANDING KIT</h1>
             <br>
             <p class="center">Passive Income 10% <br>
@@ -17,7 +17,13 @@
             <br>
                 <h1 class="display-5 center"> <strike style="color: red;">₹1,999</strike>  ₹300</h1>
             <br>
-            <a href="/signup" class="btn btn-buy" style="background: #ff695f; font-size: xx-large;">Buy now</a>
+            <div class="center">
+                <!-- https://test.instamojo.com/@setstream_in/l72636ffaf3e04a63bec1e90956dc65d5/ -->
+                <!-- https://www.instamojo.com/@bizquestaKit/lef16ac4a28a845e9a4b51eb2a5e005d5/ -->
+                <br>
+                <a href="https://test.instamojo.com/@setstream_in/l72636ffaf3e04a63bec1e90956dc65d5/" class="center" style="color:#ffffff;  background: #ff695f; width:300px; border-radius:4px; padding: 15px;">Buy Now</a>
+            </div>
+            <script src="https://js.instamojo.com/v1/button.js"></script>
         </div>
     </div>
     <br>
