--- a/views/product-page.ejs
+++ b/views/product-page.ejs
@@ -21,7 +21,7 @@
                 <!-- https://test.instamojo.com/@setstream_in/l72636ffaf3e04a63bec1e90956dc65d5/ -->
                 <!-- https://www.instamojo.com/@bizquestaKit/lef16ac4a28a845e9a4b51eb2a5e005d5/ -->
                 <br>
-                <a href="https://test.instamojo.com/@setstream_in/l72636ffaf3e04a63bec1e90956dc65d5/" class="center" style="color:#ffffff;  background: #ff695f; width:300px; border-radius:4px; padding: 15px;">Buy Now</a>
+                <a href="https://www.instamojo.com/@bizquestaKit/lef16ac4a28a845e9a4b51eb2a5e005d5/" class="center" style="color:#ffffff;  background: #ff695f; width:300px; border-radius:4px; padding: 15px;">Buy Now</a>
             </div>
             <script src="https://js.instamojo.com/v1/button.js"></script>
         </div>
