--- a/views/product-page.ejs
+++ b/views/product-page.ejs
@@ -18,11 +18,8 @@
                 <h1 class="display-5 center"> <strike style="color: red;">₹1,999</strike>  ₹300</h1>
             <br>
             <div class="center">
-                <!-- https://test.instamojo.com/@setstream_in/l72636ffaf3e04a63bec1e90956dc65d5/ -->
-                <!-- https://www.instamojo.com/@bizquestaKit/lef16ac4a28a845e9a4b51eb2a5e005d5/ -->
                 <br>
-                <a href="https://www.instamojo.com/@bizquestaKit/lef16ac4a28a845e9a4b51eb2a5e005d5/" class="center" style="color:#ffffff;  background: #ff695f; width:300px; border-radius:4px; padding: 15px;">Buy Now</a>
-            </div>
+                <div> <a style=" width: 135px; background-color: #ff695f; text-align: center; font-weight: 800; padding: 11px 0px; color: white; font-size: 12px; display: inline-block; text-decoration: none; " href='https://pmny.in/RIdWfONUowdk' > Buy Now </a> </div>            </div>
             <script src="https://js.instamojo.com/v1/button.js"></script>
         </div>
     </div>
