changed to payu and used redirect method on success

--- a/views/product-page.ejs
+++ b/views/product-page.ejs
@@ -19,10 +19,15 @@
             <br>
             <div class="center">
                 <br>
+                <!-- Instamojo -->
                 <!-- https://test.instamojo.com/@setstream_in/l72636ffaf3e04a63bec1e90956dc65d5/ -->
                 <!-- https://www.instamojo.com/@socialmediacourse/le3e306aeb4b7478bb48d82ff0bfb799c/ -->
+
+<!--                 
                 <a href="https://www.instamojo.com/@socialmediacourse/le3e306aeb4b7478bb48d82ff0bfb799c/" style="color:#ffffff; background:#ff695f;  padding: 10px 20px; border-radius:4px; text-align: center;"   data-layout="vertical">Buy Now</a>
-                <script src="https://js.instamojo.com/v1/button.js"></script>
+                <script src="https://js.instamojo.com/v1/button.js"></script> -->
+
+                <div> <a style=" width: 135px; background-color: #ff695f; text-align: center; font-weight: 800; padding: 11px 0px; color: white; font-size: 12px; display: inline-block; text-decoration: none; " href='https://pmny.in/RIdWfONUowdk' > Buy Now </a> </div>
         </div>
         <br>
         <br>
