--- a/views/product-page.ejs
+++ b/views/product-page.ejs
@@ -30,9 +30,16 @@
                 <!-- payumoney -->
                 <!-- <div> <a style=" width: 135px; background-color: #ff695f; text-align: center; font-weight: 800; padding: 11px 0px; color: white; font-size: 12px; display: inline-block; text-decoration: none; " href='https://pmny.in/RIdWfONUowdk' > Buy Now </a> </div> -->
 <!-- 
-                razorpay -->
+                razorpay api -->
+<!-- 
+                <button style="color:#ffffff; background:#ff695f;  padding: 10px 20px; border-radius:4px; text-align: center;" id="rzp-button1">Buy now</button> -->
 
-                <button style="color:#ffffff; background:#ff695f;  padding: 10px 20px; border-radius:4px; text-align: center;" id="rzp-button1">Buy now</button>
+                <!-- razorpay btn -->
+                <!-- Test button -->
+                <!-- <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_HhxidTpctQAMvT" async> </script> </form> -->
+
+                <!-- real mode -->
+                <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_HhxS4Sg2tRTOf1" async> </script> </form>
             </div>
         <br>
         <br>
@@ -56,10 +63,10 @@
     box-shadow: 5px 5px #ff695f;">
         <p>Vikas said: "Useful knowledge was provided in the videos."</p>
     </div>
-    
+<!--     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
-    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-    <script>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script> -->
+    <!-- <script>
 		axios.post('/order').then(function(info){
 			console.log(info);
 
@@ -82,7 +89,7 @@
 				e.preventDefault();
 			}
 		});
-	</script>
+	</script> -->
 
 </div>
 
