--- a/views/home.ejs
+++ b/views/home.ejs
@@ -167,7 +167,7 @@ https://templatemo.com/tm-565-onix-digital
         <div class="col-lg-12">
           <div class="owl-carousel owl-services">
             <div class="item">
-              <h4>Bulk Whatsapp android app</h4>
+              <h4>Digital Marketing Course</h4>
               <div class="icon"><img src="assets/images/service-icon-01.png" alt=""></div>
               <p>Get to know more about the topic in details</p>
             </div>
@@ -182,12 +182,12 @@ https://templatemo.com/tm-565-onix-digital
               <p>Get to know more about the topic in details</p>
             </div>
             <div class="item">
-              <h4>150+ Crore Lead Database</h4>
+              <h4>Instagram Marketing Course</h4>
               <div class="icon"><img src="assets/images/service-icon-04.png" alt=""></div>
               <p>Get to know more about the topic in details</p>
             </div>
             <div class="item">
-              <h4>9000+ Facebook Group Links</h4>
+              <h4>Whatsapp bulk tools</h4>
               <div class="icon"><img src="assets/images/service-icon-01.png" alt=""></div>
               <p>Get to know more about the topic in details</p>
             </div>
@@ -435,10 +435,10 @@ https://templatemo.com/tm-565-onix-digital
     <div class="w3-container" style="padding: 60px; margin-top: 30px;">
       <span onclick="document.getElementById('id01').style.display='none'"
       class="w3-button w3-display-topright">&times;</span>
-      <h1 style="font-family: 'PT Serif', serif;" class="center">Feel free to Contact us!</h1>
+      <h1 style="font-family: 'PT Serif', serif;" class="center">Want us to Contact you?</h1>
       <br>
       <br>
-      <form action="/contact" method="POST">
+      <form action="/contact-modal" method="POST">
         <div class="form-group">
             <input class="form-control" type="text" placeholder="Name" name="name">
         </div>
