--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -36,6 +36,8 @@
               <li><a href="/">Home</a></li>
               <li><a href="/login">Login</a></li>
               <li><a href="/products">Products</a></li>
+              <li><a href="/terms">Terms and Conditions</a></li>
+              <li><a href="/gst">GST Certification</a></li>
             </ul>
           </div>
         </div>
@@ -49,7 +51,10 @@
           <div class="copyright">
             <p>Copyright © 2021 BizQuesta All Rights Reserved. 
             <br>
-            Designed by Raydm Media</p>
+            <a href="https://www.raydmmedia.com/">  
+              Designed by Raydm Media
+            </a>
+            </p>
           </div>
         </div>
       </div>
