--- a/views/home.ejs
+++ b/views/home.ejs
@@ -128,7 +128,7 @@ https://templatemo.com/tm-565-onix-digital
                 </div>
                 <div class="item header-text">
                   <h6>Video Tutorials</h6>
-                  <h2>Watch <em>our videos</em> for your <span>knowlege</span></h2>
+                  <h2>Watch <em>our videos</em> for your <span>knowledge</span></h2>
                   <p>We provide live sessions, quality videos and personal training to make your self independent.</p>
                   <div class="down-buttons">
                     <div class="main-blue-button-hover">
