--- a/views/dash.ejs
+++ b/views/dash.ejs
@@ -69,7 +69,7 @@
                 <h1>Passive Income:</h1>
             </div>
             <div class="col-md-6" style="border: 1px solid black; padding: 60px; background-image: linear-gradient(to right, #68E487,#00FF40); color: white; border-radius: 20px;">
-                <h1 id="myid">₹<%= passive %></h1>
+                <h1>₹<%= passive %></h1>
             </div>
         </div>
         <br> 
