user reference fixed bug

--- a/views/dash.ejs
+++ b/views/dash.ejs
@@ -60,7 +60,7 @@
                 <h1>Active Income:</h1>
             </div>
             <div class="col-md-6" style="border: 1px solid black; background-image: linear-gradient(to right, #FF6666,#FF1B1B); color: white; padding: 60px; border-radius: 20px;">
-                <h1 id="myid">₹<%= active %></h1>
+                <h1>₹<%= active %></h1>
             </div>
         </div> 
         <br>
