--- a/views/home.ejs
+++ b/views/home.ejs
@@ -291,15 +291,15 @@ https://templatemo.com/tm-565-onix-digital
         </div>
         <div class="col-lg-4">
           <div class="item second-item">
-            <h4>Supreme Plan</h4>
-            <em>₹1700/mo</em>
+            <h4>Bizquesta Supreme</h4>
+            <em>₹4999/mo</em>
             <span>₹1000</span>
             <ul>
-              <li>Coming soon</li>
+              <li>GENERATE MORE MONEY FROM AFFILIATE AND LEARN TO DO IT SUPREMELY!</li>
               <br>
             </ul>
             <div class="main-blue-button-hover">
-              <a href="#">Coming soon</a>
+              <a href="/product2">Know more</a>
             </div>
           </div>
         </div>
