--- a/views/user-details.ejs
+++ b/views/user-details.ejs
@@ -25,14 +25,29 @@
             <% var active = 0; %>
             <% var passive = 0; %>
             <% var introducer; %>
-            <% for(var i = 0; i< users.length; i++){ %>
-                <% if(users[i].introducerreference.toString().trim() == user.userreference.toString().trim()) {%>
-                    <% commision+=200 %>    
-                    <% active += 200 %>
-                    <% for(var j = 0; j< users.length; j++) { %>
-                        <% if(users[i].userreference.toString().trim() == users[j].introducerreference.toString().trim()){ %>
-                            <% commision +=30 %>
-                            <% passive += 30 %>
+            <% if(user.product != undefined && user.product.toString().trim() == "2"){ %>
+                <% for(var i = 0; i< users.length; i++){ %>
+                    <% if(users[i].introducerreference.toString().trim() == user.userreference.toString().trim()) {%>
+                        <% commision+=650 %>    
+                        <% active += 650 %>
+                        <% for(var j = 0; j< users.length; j++) { %>
+                            <% if(users[i].userreference.toString().trim() == users[j].introducerreference.toString().trim()){ %>
+                                <% commision +=150 %>
+                                <% passive += 150 %>
+                            <% } %>
+                        <% } %>
+                    <% } %>
+                <% } %>
+            <% } else { %>
+                <% for(var i = 0; i< users.length; i++){ %>
+                    <% if(users[i].introducerreference.toString().trim() == user.userreference.toString().trim()) {%>
+                        <% commision+=200 %>    
+                        <% active += 200 %>
+                        <% for(var j = 0; j< users.length; j++) { %>
+                            <% if(users[i].userreference.toString().trim() == users[j].introducerreference.toString().trim()){ %>
+                                <% commision +=30 %>
+                                <% passive += 30 %>
+                            <% } %>
                         <% } %>
                     <% } %>
                 <% } %>
@@ -111,28 +126,55 @@
                         </tr>
                         </thead>
                         <tbody>
-                            <% for(var i = 0; i< users.length; i++){ %>
-                                <% if(users[i].introducerreference.toString().trim() == user.userreference.toString().trim()) {%>    
-                                        <tr>
-                                            <th scope="row"><%= users[i].username %></th>
-                                            <td><%= users[i].name %></td>
-                                            <td><%= users[i].phone %></td>
-                                            <td><%= users[i].email %></td>
-                                            <td>₹200</td>
-                                            <td>Active</td>
-                                        </tr>
-                                        <% for(var j = 0; j< users.length; j++) { %>
-                                            <% if(users[i].userreference.toString().trim() == users[j].introducerreference.toString().trim()){ %>
-                                                <tr>
-                                                    <th scope="row"><%= users[j].username %></th>
-                                                    <td><%= users[j].name %></td>
-                                                    <td><%= users[j].phone %></td>
-                                                    <td><%= users[j].email %></td>
-                                                    <td>₹30</td>
-                                                    <td>Passive</td>
-                                                </tr>
+                            <% if(user.product != undefined && user.product.toString().trim() == "2"){ %>
+                                <% for(var i = 0; i< users.length; i++){ %>
+                                    <% if(users[i].introducerreference.toString().trim() == user.userreference.toString().trim()) {%>    
+                                            <tr>
+                                                <th scope="row"><%= users[i].username %></th>
+                                                <td><%= users[i].name %></td>
+                                                <td><%= users[i].phone %></td>
+                                                <td><%= users[i].email %></td>
+                                                <td>₹650</td>
+                                                <td>Active</td>
+                                            </tr>
+                                            <% for(var j = 0; j< users.length; j++) { %>
+                                                <% if(users[i].userreference.toString().trim() == users[j].introducerreference.toString().trim()){ %>
+                                                    <tr>
+                                                        <th scope="row"><%= users[j].username %></th>
+                                                        <td><%= users[j].name %></td>
+                                                        <td><%= users[j].phone %></td>
+                                                        <td><%= users[j].email %></td>
+                                                        <td>₹150</td>
+                                                        <td>Passive</td>
+                                                    </tr>
+                                                <% } %>
                                             <% } %>
-                                        <% } %>
+                                    <% } %>
+                                <% } %>
+                            <% } else { %>
+                                <% for(var i = 0; i< users.length; i++){ %>
+                                    <% if(users[i].introducerreference.toString().trim() == user.userreference.toString().trim()) {%>    
+                                            <tr>
+                                                <th scope="row"><%= users[i].username %></th>
+                                                <td><%= users[i].name %></td>
+                                                <td><%= users[i].phone %></td>
+                                                <td><%= users[i].email %></td>
+                                                <td>₹200</td>
+                                                <td>Active</td>
+                                            </tr>
+                                            <% for(var j = 0; j< users.length; j++) { %>
+                                                <% if(users[i].userreference.toString().trim() == users[j].introducerreference.toString().trim()){ %>
+                                                    <tr>
+                                                        <th scope="row"><%= users[j].username %></th>
+                                                        <td><%= users[j].name %></td>
+                                                        <td><%= users[j].phone %></td>
+                                                        <td><%= users[j].email %></td>
+                                                        <td>₹30</td>
+                                                        <td>Passive</td>
+                                                    </tr>
+                                                <% } %>
+                                            <% } %>
+                                    <% } %>
                                 <% } %>
                             <% } %>
                         </tbody>
