S captial in supreme

--- a/views/product-page-2.ejs
+++ b/views/product-page-2.ejs
@@ -6,7 +6,7 @@
     <br>
     <div class="row">
         <div class="col-md-6 col-sm-12">
-            <img src="/assets/images/supreme.png" alt="" class="default-img img-fluid image-show">
+            <img src="/assets/images/Supreme.png" alt="" class="default-img img-fluid image-show">
         </div>
         <div class="col-md-6 col-sm-12 product-body">
             <h1 class="display-5 center">Bizquesta Supreme</h1>
